--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
-<div id="calculator" class="calculator">
-    <input type="text" id="screen" />
-    <section>	<a id="one" class="button">1</a>
-	<a class="button">2</a>
-	<a class="button">3</a>
-	<a class="button">4</a>
-	<a class="button">5</a>
-	<a class="button">6</a>
-	<a class="button">7</a>
-	<a class="button">8</a>
-	<a class="button">9</a>
- <a class="button">0</a>
- <a id="decimal" class="button">.</a>
-	<a id="add" class="button function">+</a>
-	<a id="subtract" class="button function">-</a>
-	<a id="divide" class="button function">/</a>
-	<a id="multiply" class="button function">x</a>
- <a id="clear" class="button function">C</a>
-	<a id="equals" class="button function">=</a> 
-    </section>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Hammy's Calculator</title>
+	<link rel="stylesheet" href="styles.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="init-bv.js"></script>
+</head>
+<body>
+	<div id="calculator" class="calculator">
+	    <input type="text" id="screen" />
+	    <section id="keypad">	
+		    <a id="one" class="button">1</a>
+			<a id="two" class="button">2</a>
+			<a id="three" class="button">3</a>
+			<a id="four" class="button">4</a>
+			<a id="five" class="button">5</a>
+			<a id="six" class="button">6</a>
+			<a id="seven" class="button">7</a>
+			<a id="eigth" class="button">8</a>
+			<a id="nine" class="button">9</a>
+			<a id="zero" class="button">0</a>
+			<a id="decimal" class="button">.</a>
+			<a id="add" class="button function">+</a>
+			<a id="subtract" class="button function">-</a>
+			<a id="divide" class="button function">/</a>
+			<a id="multiply" class="button function">x</a>
+			<a id="clear" class="button function">C</a>
+			<a id="equals" class="button function">=</a> 
+	    </section>
+	</div>
+</body>
+</html>
